--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 @import 'bootstrap';
 @import 'ember-power-select';
 @import 'base';
+@import 'file-browser-selector';
 
 #main{
     padding-top: 50px;
