Make file hash public and add contract details to template

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -8,3 +8,9 @@
 <button {{action "sendContract" model.journalAddress model.amountToSend model.fileHash}}>
 Submit to Journal
 </button>
+
+<p>Contract Value: {{contractValue}}</p>
+<p>Contract State: {{contractState}}</p>
+<p>Contract Journal: {{contractJournal}}</p>
+<p>Contract Researcher: {{contractResearcher}}</p>
+<p>Contract FileHash:{{contractFileHash}}</p>
