--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,6 +7,21 @@
     padding-top: 50px;
 }
 
+.peer-review-header{
+    background-image: url("images/9k=.jpg");
+    min-height: 300px;
+    padding:15px;
+}
+
+.peer-review-description{
+    min-height: 100px;
+}
+
+.peer-review-setup{
+    background-image: url("images/10k=.jpg");
+    min-height: 100px;
+}
+
 /* Override styles from ember-osf and osf */
 .footer {
     margin-top: 0;
