--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,16 +1,29 @@
-<p>Journal address:</p>
-{{input type='text' value=model.journalAddress}}
-<p>Amount to send:</p>
-{{input type='text' value=model.amountToSend}}
-<p>File hash:</p>
-{{input type='text' value=model.fileHash}}
-
-<button {{action "sendContract" model.journalAddress model.amountToSend model.fileHash}}>
-Submit to Journal
-</button>
-
-<p>Contract Value: {{contractValue}}</p>
-<p>Contract State: {{contractState}}</p>
-<p>Contract Journal: {{contractJournal}}</p>
-<p>Contract Researcher: {{contractResearcher}}</p>
-<p>Contract FileHash:{{contractFileHash}}</p>
+<div class="row">
+    <div class="peer-review-header">
+        <div>
+            <h1 class="text-center">Peer Review Ethereum</h1>
+        </div>
+        <div>
+            <h2 class="text-center">A decentralized application for researchers and scientific journals</h2>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="peer-review-description">
+        <div class="col-md-offset-2 col-md-8">
+            <p class="text-center">This application shows how "journals" (groups of scientific experts) can offer peer-review services and researchers can submit their reports to these "journals" for peer-review without the need for coordination from intermediates or central authorities. Instead, journals and researchers can be brought together over the Ethereum blockchain.</p>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="peer-review-setup">
+        <div>
+            <h3 class="text-center">Installing Ethereum</h3>
+            <p class="text-center">In order to interact with the Ethereum blockchain, download<a href="https://github.com/ethereum/go-ethereum"> geth.</a> To compile and deploy smart contracts, install<a href="https://github.com/ethereum/solidity"> solc.</a></p>
+        </div>
+        <div>
+            <h3 class="text-center">Running Ethereum</h3>
+            <p class="text-center">geth --fast --cache=512 --testnet --password /path/to/your_pw_file.txt --unlock &lt;account_addr&gt; --rpc --rpccorsdomain "http://localhost:4200" console</p>
+        </div>
+    </div>
+</div>
