--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,29 +1,62 @@
 <div class="row">
     <div class="peer-review-header">
-        <div>
-            <h1 class="text-center">Peer Review Ethereum</h1>
+        <div class="peer-review-title">
+            <h1 class="text-center">Peer-Review Ethereum</h1>
         </div>
-        <div>
+        <div class="peer-review-subtitle">
             <h2 class="text-center">A decentralized application for researchers and scientific journals</h2>
         </div>
+    </div>
+</div>
+<div class="row peer-review-chained-together">
+    <div class="col-md-4">
+        <img class="center-block" src="assets/images/scientist.png">
+    </div>
+    <div class="col-md-4">
+        <img class="center-block" src="assets/images/chain.png">
+    </div>
+    <div class="col-md-4">
+        <img class="center-block" src="assets/images/journal.png">
     </div>
 </div>
 <div class="row">
     <div class="peer-review-description">
         <div class="col-md-offset-2 col-md-8">
-            <p class="text-center">This application shows how "journals" (groups of scientific experts) can offer peer-review services and researchers can submit their reports to these "journals" for peer-review without the need for coordination from intermediates or central authorities. Instead, journals and researchers can be brought together over the Ethereum blockchain.</p>
+            <p class="text-center"> Researchers submit reports to groups of experts for peer-review without the need for coordination from intermediates or central authorities. Instead, researchers and journals are brought together over the Ethereum blockchain.</p>
         </div>
     </div>
 </div>
+<div class="row peer-review-benefits">
+    <div class="col-md-4">
+        <img class="center-block" src="assets/images/lock.png">
+    </div>
+    <div class="col-md-4">
+        <img class="center-block" src="assets/images/marker.png">
+    </div>
+    <div class="col-md-4">
+        <img class="center-block" src="assets/images/dollars.png">
+    </div>
+</div>
+ <div class="row peer-review-benefits-description">
+    <div class="col-md-4">
+        <p class="text-center">Keeps personal information secure</p>
+    </div>
+    <div class="col-md-4">
+        <p class="text-center">Permanent record of review proccess</p>
+    </div>
+    <div class="col-md-4">
+        <p class="text-center">Exchange value for peer-review services</p>
+    </div>
+</div>
 <div class="row">
-    <div class="peer-review-setup">
-        <div>
-            <h3 class="text-center">Installing Ethereum</h3>
-            <p class="text-center">In order to interact with the Ethereum blockchain, download<a href="https://github.com/ethereum/go-ethereum"> geth.</a> To compile and deploy smart contracts, install<a href="https://github.com/ethereum/solidity"> solc.</a></p>
-        </div>
-        <div>
-            <h3 class="text-center">Running Ethereum</h3>
-            <p class="text-center">geth --fast --cache=512 --testnet --password /path/to/your_pw_file.txt --unlock &lt;account_addr&gt; --rpc --rpccorsdomain "http://localhost:4200" console</p>
-        </div>
+    <div class="peer-review-install">
+        <h2 class="text-center">Installing Ethereum Client</h2>
+        <p class="text-center">In order to interact with the Ethereum blockchain, download<a href="https://github.com/ethereum/go-ethereum"> geth.</a> To compile and deploy smart contracts, install<a href="https://github.com/ethereum/solidity"> solc.</a></p>
+    </div>
+</div>
+<div class="row">
+    <div class="peer-review-running">
+        <h2 class="text-center">Running Ethereum Client</h2>
+        <p class="text-center">geth --fast --cache=512 --testnet --password /path/to/your_pw_file.txt --unlock &lt;account_addr&gt; --rpc --rpccorsdomain "http://localhost:4200" console</p>
     </div>
 </div>
