--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,9 @@
 {{title "OSF"}}
 <div id="main" class="container-fluid">
     <div class="row">
+        {{peer-review-navbar}}
+    </div>
+    <div class="row">
         <div class="col-md-12" role="main">
             {{outlet}}
         </div>
