Add create journal route

--- a/app/templates/components/peer-review-navbar.hbs
+++ b/app/templates/components/peer-review-navbar.hbs
@@ -9,6 +9,7 @@
         </div>
         <div id="preprint-navbar-links" class="navbar-collapse collapse navbar-right">
             <ul class="nav navbar-nav">
+                <li>{{#link-to "list-contracts" }} {{t "global.view_contracts"}} {{/link-to}}</li>
                 <li>{{#link-to "create-contract" }} {{t "global.add_contract"}} {{/link-to}}</li>
                 <li>{{#link-to "journals" }} {{t "global.add_journal"}} {{/link-to}}</li>
             </ul>
